--- a/public/style/style.css
+++ b/public/style/style.css
@@ -76,7 +76,7 @@ th, td{
 #card-category{
     text-align: center;
     color: white;
-    min-width: 90px;
+    /* min-width: 90px; */
     padding: 10px 0 0 0;
 }
 
